--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ html {
 
 .header {
   grid-area: header;
-  padding: 1.2em 0.5em;
+  padding: 1.2em 1em;
 }
 
 .header-nav {
@@ -499,7 +499,7 @@ label {
 /* || Footer Styles */
 
 .footer {
-  width: 100%;
+  min-width: 100%;
   height: 700px;
   margin-top: 10em;
   display: flex;
